--- a/.gitignore
+++ b/.gitignore
@@ -153,7 +153,7 @@ modules/*
 override/*
 themes/*/
 themes/classic
-!themes/child_theme
+!themes/child_classic
 !themes/_core
 !themes/_libraries
 
