Updated dockerfile and docker-compose

--- a/Docker/Maria/Dockerfile
+++ b/Docker/Maria/Dockerfile
@@ -3,7 +3,7 @@ FROM mariadb:10.11-rc
 ENV MYSQL_ROOT_PASSWORD Asseco#123
 ENV MYSQL_DATABASE prestashop
 
-ADD be_db_export.sql /docker-entrypoint-initdb.d
+ADD prestashop.sql /docker-entrypoint-initdb.d
 
 RUN apt-get update
 
