Updates to config

--- a/Docker/Maria/Dockerfile
+++ b/Docker/Maria/Dockerfile
@@ -3,7 +3,7 @@ FROM mariadb:10.11-rc
 ENV MYSQL_ROOT_PASSWORD Asseco#123
 ENV MYSQL_DATABASE prestashop
 
-ADD prestashop.sql /docker-entrypoint-initdb.d
+COPY ./prestashop.sql /docker-entrypoint-initdb.d
 
 RUN apt-get update
 
